@@ -1,0 +1,7 @@
+long
+_stp_strncpy_from_user(char *dst, const char __user *src, long count)
+{
+  return 0;
+}
+
+void __get_user_4(void) {};
